--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity android:name=".activity.Activity1" />
+        <activity android:name=".activity.Activity2" />
 
         <service
             android:name=".service.TestService1"
