--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
 
         <activity android:name=".activity.Activity1" />
         <activity android:name=".activity.Activity2" />
+        <activity android:name=".activity.WebActivity"
+            android:configChanges="orientation|screenSize|screenLayout"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
 
         <service
             android:name=".service.TestService1"
