--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ allprojects {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //    compile 'com.facebook.fresco:animated-webp:0.13.0'
-    compile 'com.facebook.fresco:webpsupport:0.13.0'
+    compile 'com.facebook.fresco:webpsupport:1.9.0'
+    compile 'com.android.support:recyclerview-v7:27.1.1'
     compile project(':testaar')
 }
