--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.example.chenren1.hello"
         minSdkVersion 16
@@ -26,9 +25,9 @@ allprojects {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //    compile 'com.facebook.fresco:animated-webp:0.13.0'
-    compile 'com.facebook.fresco:webpsupport:1.9.0'
-    compile 'com.android.support:recyclerview-v7:27.1.1'
-    compile project(':testaar')
+    implementation 'com.facebook.fresco:webpsupport:1.9.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation project(':testaar')
 }
