--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".activity.ShortVideoActivity" />
+        <activity android:name=".activity.Activity3" />
 
         <service
             android:name=".service.TestService1"
