--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".activity.ShortVideoActivity" />
         <activity android:name=".activity.Activity3" />
+        <activity
+            android:name=".activity.Activity4"
+            android:configChanges="screenLayout|orientation"
+            android:launchMode="singleTask"
+            android:resizeableActivity="true"
+            android:supportsPictureInPicture="true" />
 
         <service
             android:name=".service.TestService1"
